<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/uPictureIv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_face_24"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/uNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="Name"/>
                <TextView
                    android:id="@+id/pTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="33min"/>

            </LinearLayout>
            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_baseline_more_horiz_24"/>

        </LinearLayout>
        <TextView
            android:id="@+id/pTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Title"
            android:autoLink="all"/>
        <TextView
            android:id="@+id/pDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="the description of the post"
            android:autoLink="all"/>

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pLikesTv"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.2k Likes"/>
            <TextView
                android:id="@+id/pCommentsTv"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.2k Comments"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_thumb_up_24"
                android:background="@null"
                android:drawablePadding="5dp"
                android:text="Like"/>
            <Button
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_chat_24"
                android:drawablePadding="5dp"
                android:background="@null"
                android:text="Comment"/>

        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>