...
    android:background="@color/homeBackground"
    android:orientation="vertical"
    tools:context=".Fragment.HomeFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layout_user_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:weightSum="4"
        android:background="@color/gray">

...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_medical_information"
                android:layout_marginRight="8dp"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="73dp">
...
